# Nixalis

./: .gitignore  CMakeLists.txt  CMake_Template.txt  README.md
Nixalis/: CMakeLists.txt  Nixalis.h
Nixalis/nixalis/: CMakeLists.txt
Nixalis/nixalis/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  Entry.h  Keys.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.cpp  Window.h
Nixalis/nixalis/Event/: CMakeLists.txt  Event.h  KeyEvent.h
Nixalis/platform/: CMakeLists.txt
Nixalis/platform/Linux/: CMakeLists.txt  LinuxWindow.cpp  LinuxWindow.h
Nixalis/platform/SDL/: CMakeLists.txt  SDLEvent.h
Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.h
